run sveltekit-node as child process with proxy. Plus some rewrite cleanup.